...
            android:id="@id/details_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/details_page_categories_title">

            <ListView
                android:id="@+id/details_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false" />

        </nz.ac.aut.comp705.sortmystuff.ui.contents.ScrollChildSwipeRefreshLayout>
...
