<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nz.ac.aut.comp705.sortmystuff.ui.search.SearchActivity">


    <group android:id="@+id/search_menu_group">

        <item android:id="@+id/search_btn"
            android:icon="@drawable/ic_search_white_48dp"
            android:title="@string/main_menu_search_title"
            app:showAsAction="ifRoom"
            app:actionViewClass="android.support.v7.widget.SearchView"/>

    </group>
</menu>
