<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nz.ac.aut.comp705.sortmystuff.ui.search.SearchActivity"
    tools:showIn="@layout/search_act">

    <ListView
        android:id="@+id/result_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>