<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nz.ac.aut.comp705.sortmystuff.ui.contents.ContentsActivity"
    android:id="@+id/main_menu">


    <group android:id="@+id/main_menu_group">

        <item android:id="@+id/main_menu_search_button"
            android:icon="@drawable/ic_search_white_48dp"
            android:title="@string/main_menu_search_title"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/main_menu_sort_button"
            android:icon="@drawable/ic_sort_contents"
            android:title="@string/main_menu_sort_title"
            app:showAsAction="ifRoom" />

    </group>
</menu>
